--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <groupId>wsdl4j</groupId>
             <artifactId>wsdl4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ru.mirea</groupId>
+            <artifactId>xml-tools</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
